Add rudimentary styling for table info

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -550,6 +550,11 @@ select {
     font-size: medium;
 }
 
+.search-info {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
 @media only screen and (orientation: portrait) {
     .elements-with-controls-table thead th {
         font-size: small;
